# bebop_hri

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  LICENSE  _config.yml  index.html  index.md  package.xml  params.json
_includes/: head.html  index.md
config/: autonomy_human.yaml  bebop.yaml  behavior.yaml  behavior_artag.yaml  behavior_indoor.yaml  log710.yaml  obz_bebop.ini  obzerver.yaml  twist_mux.yaml  twist_mux_locks.yaml  vel_ctrl_abs.yaml  vel_ctrl_servo.yaml  vel_exp_openloop.yaml  vel_exp_plan_1.yaml  vel_exp_plan_2.yaml  vel_exp_plan_3.yaml  vel_exp_plan_4.yaml  vel_exp_plan_5.yaml
data/: README.md
include/bebop_hri/: behavior.h  util.h
launch/: bebop_ctrl.launch  behavior.launch  depth.launch  depth_eval.launch  human_debug.launch  iros15.launch  iros16.launch  iros16_exp_detect.launch  iros16_exp_indoor.launch  iros16_exp_track.launch  iros16_exp_velocity.launch  obzerver.launch  obzerver_debug.launch  republish_all.launch  rqt.launch  tesla.launch  vicon.launch
matlab/: README.md  bebop_iden.sh  bebop_model_v1.mat  create_acc_fig.m  create_tilt_accel_fit.m  import_and_filter_data.m  normal_angle.m  normalizeAngle.m  parrot_bebop_veltilt_lin_m.m  parrot_bebop_veltilt_m.m  post_process.py  process.m  rostopic.sh  rostopic.txt  term_ros.sh  test_simulation.m
rosinstall/: iros16.rosinstall
rqt/: close.perspective  human.perspective  iros16.perspective  obzerver.perspective
script/: bag.sh  bag_all.sh  bebop_iden.py  bebop_iden.sh  clear_anim.py  kill_leds.sh  leds.sh
script/analysis/: README.MD
script/analysis/depth/: extract.sh
script/analysis/gps/: extract.sh
script/analysis/trajectory/: draw_all_targets.m  draw_all_trajectories.m  extract.sh  target_drawer.m  trajectory_drawer.m  trimmer.py
script/analysis/vel/: all_tests.m  post_process.py  process_bag.sh  visualize_speed_test2.m
src/: behavior.cpp  depth_eval_node.cpp  util.cpp
(+6 files in other folders)
